--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     "aspectMode": "cover",
     "action": {
       "type": "uri",
-      "uri": "https://liff.line.me/1657233063-pKnJb622"
+      "uri": "https://msn1.bet/login?prefix=SPW"
     }
   },
   "body": {
@@ -158,10 +158,20 @@
         "height": "sm",
         "action": {
           "type": "uri",
-          "label": "เข้าร่วมกิจกรรม",
+          "label": "คลิกแชร์กิจกรรม",
           "uri": "https://liff.line.me/1657233063-pKnJb622"
         },
         "style": "secondary"
+      },
+      {
+        "type": "button",
+        "height": "sm",
+        "action": {
+          "type": "uri",
+          "label": "⭐คลิกเพิ่มรายการโปรด⭐",
+          "uri": "https://msn1.bet/login?prefix=SPW"
+        },
+        "style": "link"
       },
       {
         "type": "box",
