--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
           <img src="https://www.img.in.th/images/5712732ae75f763392078fca588f35cb.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
-          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">กดติดดาวทางเข้าเล่นพร้อมแชร์ให้เพื่อน</br>ส่งสิทธิได้สูงสุด 10คน รับเลย 50บ.</p>
+          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">คลิกเพิ่มรายการโปรด(Bookmark)หน้าAUTO</br>แชร์สิทธิให้เพื่อน 10คน รับเลย 50บ.</p>
           <div class="d-grid gap-2 col-10 mx-auto">
             <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">คลิกแชร์ที่นี่!</button>
           </div>
@@ -52,7 +52,7 @@
   async function sendShare() { 
    const result = await liff.shareTargetPicker([{
         "type": "flex",
-        "altText": "รับเลยทุนฟรี 50.- เล่นเกมได้ทุกค่าย",
+        "altText": "กดติดดาวเว็ปเรารับเลยทุนฟรี 50.- ถอนได้เลยไม่ต้องฝาก",
     "type": "flex",
     "contents": {
   "type": "bubble",
